public/v/release-4.5/_sources/reference_workflows/isaac_for_manipulation/tutorials/setup/setup_with_gripper.rst.txt
==========================================================================
Setup Hardware and Software for Real Robot with Isaac ROS Manipulation
==========================================================================

Overview
--------

This tutorial walks through the process of setting up the hardware and software for a real robot with Isaac ROS Manipulation.
Isaac ROS Manipulation supports both Universal Robots (UR) and Flexiv Rizon manipulators.

Tutorial
--------

Set Up Robot, Drivers, and Gripper
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Follow the setup guide for your robot. This includes hardware setup, building the robot driver from source, and configuring the gripper.

.. tabs::

   .. tab:: UR Robot

      Refer to the :doc:`Universal Robots setup guide </robots/universal_robots/index>`.

   .. tab:: Flexiv Robot

      Refer to the :doc:`Flexiv Robots setup guide </robots/flexiv/index>`, which covers:

      - Setting up the Flexiv Rizon robot for remote control
      - :ref:`Building Flexiv drivers from source <robots/flexiv/index:Build Flexiv Drivers from Source>`
      - :ref:`Configuring the Grav gripper <robots/flexiv/index:Configure Grav Gripper>`

Set Up Cameras for Robot
~~~~~~~~~~~~~~~~~~~~~~~~

#. Refer to the :ref:`Set Up Cameras for Robot section <robots/universal_robots/index:Set Up Cameras for Robot>`.

.. note::

   Multiple cameras can help reduce occlusion and noise in the scene and therefore increase the quality and completeness of the 3D reconstruction used for collision avoidance.

   While the Pick and Place workflow with multiple cameras runs scene reconstruction for obstacle-aware planning on all cameras, object detection and pose estimation are only enabled on the camera with the lowest index.

   Reflective or smooth, featureless surfaces in the environment may increase noise in the depth estimation.

   Use of multiple cameras is recommended.

   Mixing stereo camera types is untested but may work with modifications to the launch files.

.. warning::

   The obstacle avoidance behavior demonstrated in this tutorial is not a safety function and does not
   comply with any national or international functional safety standards. When testing obstacle avoidance
   behavior, do not use human limbs or other living entities.


Configure Docker for Real-Time Scheduling
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

If you are using the Isaac ROS Docker container, configure the required Docker arguments for real-time scheduling support.
Refer to :ref:`Configure Docker Arguments for Real-Time Scheduling <getting_started/compute/preempt_setup:Configure Docker Arguments for Real-Time Scheduling>` for instructions.

Set Up Development Environment
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. include:: /_snippets/set_up_dev_env.rst

Build Isaac ROS Manipulation Packages
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. include:: ../_snippets/isaac_ros_manipulation_build_instructions.rst

.. _set-up-perception-deep-learning-models:

Set Up Perception Deep Learning Models
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. include:: ../_snippets/isaac_ros_manipulation_perception_models.rst

Run Pre-Flight Tests on Real Robot (Optional but highly recommended)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

To verify that you have setup the Isaac ROS Manipulation correctly, run the following command:

.. code:: bash

   export ENABLE_MANIPULATOR_TESTING=on_robot
   export ISAAC_ROS_MANIPULATION_TEST_CONFIG=<config_file_path_for_your_robot>
   python3 -m pytest ${ISAAC_ROS_WS}/src/isaac_ros_manipulation/isaac_ros_manipulation_bringup/test

.. note::

   You can also use ``colcon test --packages-select isaac_ros_manipulation_bringup`` to run the tests.
   However, ``pytest`` has a better output and makes it easier to view status and progress of the tests.
   If these tests fail, refer to :doc:`Isaac ROS Manipulation Testing Guide </reference_workflows/isaac_for_manipulation/tutorials/setup/testing_manipulator>` for more information.
   It is recommended to run the tests manually using ``launch_test`` and then manually inspecting the results.

This will run a series of tests to verify that the Isaac ROS Manipulation is working correctly.
